# reposit

ConnectionClient2.0/: a.out  config.txt  main  main.cpp
ConnectionClient2.0/CaptureView/: CaptureView.h  CaptureView.hpp  CaptureView_Sign.hpp
ConnectionClient2.0/Config/: ConfigInfo.hpp
ConnectionClient2.0/ConnectModule/: MailOptions.hpp
ConnectionClient2.0/CustomFunction/: MyBuffer.hpp  Tuple.hpp
ConnectionClient2.0/VideoStream/: VideoStream.h  VideoStream.hpp  VideoStream_Sign.hpp
ConnectionClient2.0/cmake/: CMakeLists.txt  FindOpenSSL.cmake
RemoteControlServer2.0/: RemoteControlServer2.0.sln
RemoteControlServer2.0/ConfigWindow/: App.xaml  App.xaml.cs  ConfigWindow.csproj  MainWindow.xaml  MainWindow.xaml.cs
RemoteControlServer2.0/InternetCommunicator/: InternetCommunicator.csproj  Program.cs
RemoteControlServer2.0/Loger/: LogWriter.cs  Loger.csproj
RemoteControlServer2.0/MailOptions/: IpPortData.cs  MailOpt.cs  MailOptions.csproj
RemoteControlServer2.0/MessagePack/: Class1.cs  MessagePack.csproj
RemoteControlServer2.0/ProtectedVal/: ProtectedList.cs  ProtectedVal.csproj  V.cs
RemoteControlServer2.0/ProtectedValues/: ProtectedVal.cs  ProtectedValues.csproj
RemoteControlServer2.0/ProtocolCommunication/: ClientObjPrototype.cs  Cover.cs  DataCover128kb.cs  DataTypeEnum.cs  Protocol.cs  ProtocolCommunication.csproj  ProtocolPackage.cs
RemoteControlServer2.0/RemoteControlServer2.0/: ClientsControl.cs  ConnectListener.cs  Program.cs  RemoteControlServer2.0.csproj
RemoteControlServer2.0/Terminal/: App.xaml  App.xaml.cs  Config.cs  (+7 more)
(+75 files in other folders)
